examples/failing/conflicting-route-match/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-shop-blue
  namespace: crm-shop
spec:
  selector:
    app: crm-shop-blue
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: crm-shop-green
  namespace: crm-shop
spec:
  selector:
    app: crm-shop-green
  ports:
    - port: 8080
      targetPort: 8080
