examples/failing/conflicting-route-match/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: crm-shop-gateway
  namespace: crm-shop
spec:
  gatewayClassName: eg
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      hostname: crm-shop.example.com
